--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -6,8 +6,160 @@
     <script src="../jquery-1.11.2.min.js"></script>
     <script src="../bootstrap.min.js"></script>
     <link rel="stylesheet" href="../bootstrap.min.css"></head>
+<style type="text/css">
+  #filedress{ display: none }
+</style>
+
+<script type="text/javascript">
+    function test1(s){
+        var fileText = document.getElementById("filedress");
+        fileText.value= s.value;
+        fileText.style.display='block';
+    }
+
+</script>
 </head>
 <body>
+<form role="form" class="form-inline">
+    <div class="form-group">
+        <label for="name">名称</label>
+        <input type="text" class="form-control" id="name"
+               placeholder="请输入名称">
+    </div>
+    <div class="form-group">
+        <label for="inputfile">文件输入</label>
+        <input type="file" id="inputfile" onchange="test1(this)">
+        <p class="help-block">这里是块级帮助文本的实例。</p>
+        <input type="test" id="filedress" />
+    </div>
+        <label>
+            <input type="checkbox"> 请打勾
+        </label>
+    </div>
+    <button type="submit" class="btn btn-default">提交</button>
+</form>
 
+<!--水平表单
+
+水平表单与其他表单不仅标记的数量上不同，而且表单的呈现形式也不同。如需创建一个水平布局的表单，请按下面的几个步骤进行：
+
+向父 <form> 元素添加 class .form-horizontal。
+把标签和控件放在一个带有 class .form-group 的 <div> 中。
+向标签添加 class .control-label。-->
+
+<div class="container">
+<form class="form-horizontal" role="form">
+    <div class="form-group">
+        <label for="firstname" class="col-sm-2 control-label">名字</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="firstname"
+                   placeholder="请输入名字">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="lastname" class="col-sm-2 control-label">姓</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="lastname"
+                   placeholder="请输入姓">
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox"> 请记住我
+                </label>
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-default">登录</button>
+        </div>
+    </div>
+</form>
+</div>
+
+<form class="form-horizontal" role="form">
+    <div class="form-group">
+        <label class="col-sm-2 control-label">Email</label>
+        <div class="col-sm-10">
+            <p class="form-control-static">email@example.com</p>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="inputPassword" class="col-sm-2 control-label">密码</label>
+        <div class="col-sm-10">
+            <input type="password" class="form-control" id="inputPassword"
+                   placeholder="请输入密码">
+        </div>
+    </div>
+    </form>
+
+<div class="container">
+<form class="form-horizontal" role="form">
+    <div class="form-group">
+        <label class="col-sm-2 control-label">聚焦</label>
+        <div class="col-sm-10">
+            <input class="form-control" id="focusedInput" type="text"
+                   value="该输入框获得焦点...">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="inputPassword" class="col-sm-2 control-label">
+            禁用
+        </label>
+        <div class="col-sm-10">
+            <input class="form-control" id="disabledInput" type="text"
+                   placeholder="该输入框禁止输入..." disabled>
+        </div>
+    </div>
+    <fieldset disabled>
+        <div class="form-group">
+            <label for="disabledTextInput"  class="col-sm-2 control-label">
+                禁用输入（Fieldset disabled）
+            </label>
+            <div class="col-sm-10">
+                <input type="text" id="disabledTextInput" class="form-control"
+                       placeholder="禁止输入">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="disabledSelect"  class="col-sm-2 control-label">
+                禁用选择菜单（Fieldset disabled）
+            </label>
+            <div class="col-sm-10">
+                <select id="disabledSelect" class="form-control">
+                    <option>禁止选择</option>
+                </select>
+            </div>
+        </div>
+    </fieldset>
+    <div class="form-group has-success">
+        <label class="col-sm-2 control-label" for="inputSuccess">
+            输入成功
+        </label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputSuccess">
+        </div>
+    </div>
+    <div class="form-group has-warning">
+        <label class="col-sm-2 control-label" for="inputWarning">
+            输入警告
+        </label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputWarning">
+        </div>
+    </div>
+    <div class="form-group has-error">
+        <label class="col-sm-2 control-label" for="inputError">
+            输入错误
+        </label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputError">
+        </div>
+    </div>
+</form>
+  </div>
 </body>
 </html>
