--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -5,7 +5,7 @@
     <title></title>
     <script src="../jquery-1.11.2.min.js"></script>
     <script src="../bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../bootstrap.min.css"></head>
+    <link rel="stylesheet" href="../lesson7/bootstrap.min.css"></head>
 </head>
 <body>
 <!-- 表示一个成功的或积极的动作 -->
