--- a/lesson5/index.html
+++ b/lesson5/index.html
@@ -5,7 +5,7 @@
     <title></title>
     <script src="../jquery-1.11.2.min.js"></script>
     <script src="../bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../bootstrap.min.css">
+    <link rel="stylesheet" href="../lesson7/bootstrap.min.css">
 </head>
 <body>
 <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
