--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -5,7 +5,7 @@
     <title></title>
     <script src="../jquery-1.11.2.min.js"></script>
     <script src="../bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../bootstrap.min.css">
+    <link rel="stylesheet" href="../lesson7/bootstrap.min.css">
 </head>
 <body>
 
@@ -35,5 +35,7 @@
         </ul>
     </div>
 </div>
+
+
 </body>
 </html>
