--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -3,8 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <script src="../jquery-1.11.2.min.js"></script>
-    <script src="../bootstrap.min.js"></script>
+    <script src="../js/jquery-1.11.2.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../lesson7/bootstrap.min.css"></head>
 <style type="text/css">
   #filedress{ display: none }
