--- a/lesson7/login.html
+++ b/lesson7/login.html
@@ -3,12 +3,14 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+<!--    <link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">-->
+   <link rel="stylesheet" href="../css/bootstrap.min.css">
     <style type="text/css">
         .loginbg{ width:600px; height:400px; background-color: rgba(199, 223, 199, 0.2);top:25%;position: absolute;  margin-left: 50%; left: -300px;border-radius:15px; border: 1px solid #ffe6a9; }
     </style>
-    <script src="../jquery-1.11.2.min.js"></script>
-    <script src="../bootstrap.min.js"></script>
-    <link rel="stylesheet" href="bootstrap.min.css">
+    <script src="../js/jquery-1.11.2.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+
 
 </head>
 <body>
@@ -16,7 +18,7 @@
 <div class="container">
 <div class="loginbg">
 <form role="form" class="form-horizontal" style="margin-top:120px">
-    <div class="form-group">
+    <div class="form-group has-error has-feedback">
         <label class="col-sm-2 col-sm-offset-3" style="line-height:35px"> UserName</label>
         <div class="col-sm-7">
         <input type="text" placeholder="请输入用户名"  class="form-control"   style="width: 170px" >
@@ -28,24 +30,18 @@
             <input type="password" placeholder="请输入密码"  class="form-control"   style="width: 170px">
         </div>
     </div>
-    <div class="form-group">
+    <div class="checkbox form-group">
         <div class="col-sm-9 col-sm-offset-5">
             <label> <input type="checkbox" checked> 记住密码</label>
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group" style="margin-top: 10px">
         <div class="col-sm-9 col-sm-offset-5">
         <button type="submit" class="btn btn-default btn-success">登陆</button>
         <button type="submit" class="btn btn-default btn-info" style="margin-left: 20px">注册</button>
         </div>
     </div>
-
-
-
 </form>
-
 </div>
-
 </div>
-<span class="glyphicon glyphicon-user" style="color: rgb(101, 147, 127);"> User</span>
 </body>
