--- a/lesson7/registered.html
+++ b/lesson7/registered.html
@@ -3,52 +3,64 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <script src="../jquery-1.11.2.min.js"></script>
-    <script src="../bootstrap.min.js"></script>
-    <link rel="stylesheet" href="bootstrap.min.css">
+    <script src="../js/jquery-1.11.2.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
 </head>
 <body>
+
+<div style="width:500px; height:500px;padding: 20px">
 <form role="form" class="form-horizontal" style="margin-top:120px">
-    <div class="form-group">
-        <label class="col-sm-2 col-sm-offset-3" style="line-height:35px"> UserName</label>
-        <div class="col-sm-7">
-            <input type="text" placeholder="请输入用户名"  class="form-control"   style="width: 170px" >
+    <div class="form-group has-feedback">
+        <label class="col-sm-3 col-sm-offset-3" style="line-height:35px"> UserName</label>
+        <div class="col-sm-6 ">
+            <input type="text" placeholder="请输入用户名"  class="form-control" >
+            <span class="glyphicon glyphicon-ok form-control-feedback" style="color: rgb(255, 140, 60);"> </span>
+        </div>
+
+
+
+    </div>
+    <div class="form-group has-feedback">
+        <label class="col-sm-3 col-sm-offset-3" style="line-height:35px">PassWord</label>
+        <div class="col-sm-6">
+            <input type="password" placeholder="请输入密码"  class="form-control" >
+            <span class="glyphicon glyphicon-remove-circle form-control-feedback" style="color: rgb(255, 140, 60);"> </span>
         </div>
     </div>
-    <div class="form-group">
-        <label class="col-sm-2 col-sm-offset-3" style="line-height:35px">PassWord</label>
-        <div class="col-sm-7">
-            <input type="password" placeholder="请输入密码"  class="form-control"   style="width: 170px">
+    <div class="form-group has-feedback">
+        <label class="col-sm-3 col-sm-offset-3" style="line-height:35px">再次输入密码</label>
+        <div class="col-sm-6">
+            <input type="password" placeholder="再次输入密码"  class="form-control"   >
+            <span class="glyphicon glyphicon-ok form-control-feedback" style="color: rgb(255, 140, 60);"> </span>
         </div>
     </div>
-    <div class="form-group">
-        <label class="col-sm-2 col-sm-offset-3" style="line-height:35px">再次输入密码</label>
-        <div class="col-sm-7">
-            <input type="password" placeholder="再次输入密码"  class="form-control"   style="width: 170px">
+    <div class="form-group has-feedback">
+        <label class="col-sm-3 col-sm-offset-3" style="line-height:35px">Email</label>
+        <div class="col-sm-6">
+            <input type="email" placeholder="请输入邮箱"  class="form-control"   >
+            <span class="glyphicon glyphicon-ok form-control-feedback" style="color: rgb(255, 140, 60);"> </span>
         </div>
     </div>
-    <div class="form-group">
-        <label class="col-sm-2 col-sm-offset-3" style="line-height:35px">Email</label>
-        <div class="col-sm-7">
-            <input type="email" placeholder="请输入邮箱"  class="form-control"   style="width: 170px">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="col-sm-2 col-sm-offset-3" style="line-height:35px">Moblie</label>
-        <div class="col-sm-7">
-            <input type="email" placeholder="联系方式"  class="form-control"   style="width: 170px">
+    <div class="form-group has-feedback">
+        <label class="col-sm-3 col-sm-offset-3" style="line-height:35px">Moblie</label>
+        <div class="col-sm-6">
+            <input type="email" placeholder="联系方式"  class="form-control"  >
+            <span class="glyphicon glyphicon-ok form-control-feedback" style="color: rgb(255, 140, 60);"> </span>
         </div>
     </div>
 
     <div class="form-group">
-        <div class="col-sm-9 col-sm-offset-5">
-            <button type="submit" class="btn btn-default btn-success">确定</button>
+        <div class="col-sm-9 col-sm-offset-6">
+            <button type="submit" class="btn btn-default btn-success"> <span class="glyphicon glyphicon-ok" style="color: rgb(255, 255, 255);"> 确 定</span></button>
             <button type="submit" class="btn btn-default btn-info" style="margin-left: 20px">重置</button>
+
         </div>
     </div>
 
 
 
 </form>
+    </div>
 </body>
 </html>
