--- a/lesson8/page1.html
+++ b/lesson8/page1.html
@@ -38,5 +38,25 @@
         </div>
     </div>
 </div>
+<div class="container">
+   <div class="input-group">
+       <input class="form-control" type="text" />
+       <div class="input-group-btn">
+       <button  data-toggle="dropdown" type="button"  class="btn btn-info  dropdown-toggle">
+           下拉菜单<span class="caret"></span>
+       </button>
+           <ul class="dropdown-menu" role="menu">
+
+             <li><a>Helle</a></li>
+               <li><a>Helle</a></li>
+               <li><a>Helle</a></li>
+               <li><a>Helle</a></li>
+               <li><a>Helle</a></li>
+
+
+           </ul>
+        </div>
+   </div>
+</div>
 </body>
 </html>
